clusters/homelab/traefik/traefik/traefik-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-ingress
  namespace: traefik
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.0.0/24
    - from:
        - ipBlock:
            cidr: 192.168.1.1/24
        - ipBlock:
            cidr: 192.168.30.100/32
        - ipBlock:
            cidr: 192.168.30.101/32
        - ipBlock:
            cidr: 192.168.30.102/32
      ports:
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 8443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-egress
  namespace: traefik
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.0.0/24
      ports:
        - port: 6443
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik-forward-auth
      ports:
        - port: 4181
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 192.168.0.10/32
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: adguard
          podSelector:
            matchLabels:
              app.kubernetes.io/name: adguard-home
      ports:
        - port: 53
          protocol: UDP
        - port: 3000
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: nzbget
          podSelector:
            matchLabels:
              app.kubernetes.io/name: nzbget
      ports:
        - port: 6789
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: sonarr
          podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr
      ports:
        - port: 8989
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: radarr
          podSelector:
            matchLabels:
              app.kubernetes.io/name: radarr
      ports:
        - port: 7878
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: readarr
          podSelector:
            matchLabels:
              app.kubernetes.io/name: readarr
      ports:
        - port: 8787
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: tautulli
          podSelector:
            matchLabels:
              app.kubernetes.io/name: tautulli
      ports:
        - port: 8181
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: hydra
          podSelector:
            matchLabels:
              app.kubernetes.io/name: nzbhydra2
      ports:
        - port: 5076
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: freshrss
          podSelector:
            matchLabels:
              app.kubernetes.io/name: freshrss
      ports:
        - port: 80
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: resilio
          podSelector:
            matchLabels:
              app.kubernetes.io/name: resilio-sync
      ports:
        - port: 8888
          protocol: TCP
        - port: 55555
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: longhorn-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: longhorn
      ports:
        - port: 8000
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: monitoring
          podSelector:
            matchLabels:
              app: grafana
      ports:
        - port: 3000
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: monitoring
          podSelector:
            matchLabels:
              app: prometheus
      ports:
        - port: 9090
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: home-automation
          podSelector:
            matchLabels:
              app.kubernetes.io/name: home-assistant
      ports:
        - port: 8123
          protocol: TCP
        - port: 12321
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: home-automation
          podSelector:
            matchLabels:
              app.kubernetes.io/name: esphome
      ports:
        - port: 6052
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 192.168.0.0/24
      ports:
        - port: 6052
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              ns: dash
          podSelector:
            matchLabels:
              app.kubernetes.io/name: homer
      ports:
        - port: 8080
          protocol: TCP
        - port: 12321
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - port: 443
          protocol: TCP
        - port: 53
          protocol: UDP
